<?xml version="1.0"?>
<package>
  <name>face_msgs</name>
  <version>1.0.0</version>
  <description>ROS Messages for Microsoft's Face API</description>

  <maintainer email="haewon@media.mit.edu">Hae Won Park</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/face_msgs</url> -->
  <author email="yaseen@mit.edu">Yaseen Alkhafaji</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
